0. Stream API улучшения[#242712]